# SocketShowcase

./: .gitignore  CMakeLists.txt  main.c  setup
include/: gui.h  manager.h  server.h  socket_handler.h
src/: CMakeLists.txt  display_info.c  gui.c  log.c  manager.c  server.c  socket_handler.c
src/include/: log.h
static/: index.html  jmono.fnt
